--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
         </div>
 
         <footer>
-            <div style="margin-top:30px; text-align: center; color: var(--muted); font-size: 12px;">Avalon Offline Game UI Redesign (Light Mode & Modal Flow Theme)</div>
+            <div style="margin-top:30px; text-align: center; color: var(--muted); font-size: 12px;">เต็ม 10 ให้ 7 เจ็ดว่าดัดจัดว่าเด็ด มั้วะ</div>
         </footer>
     </div>
 
@@ -995,3 +995,4 @@
     </script>
 </body>
 </html>
+
