--- a/index.html
+++ b/index.html
@@ -327,8 +327,8 @@
         <header>
             <h1>AVALON</h1>
             <div>
-                <div style="font-size:20px;font-weight: 700; color: var(--text-dark);">The Card of Destiny</div>
-                <div style="color:var(--muted);font-size:14px">บอร์ดเกมออฟไลน์สำหรับอุปกรณ์เดียว</div>
+                <div style="font-size:20px;font-weight: 700; color: var(--text-dark);">คนเมาห้ามเล่น</div>
+                <div style="color:var(--muted);font-size:14px">บอร์ดเกมสร้างโดย 9thanz</div>
             </div>
         </header>
 
@@ -457,7 +457,7 @@
         </div>
 
         <footer>
-            <div style="margin-top:30px; text-align: center; color: var(--muted); font-size: 12px;">Avalon Offline Game UI Redesign (Light Mode & Modal Flow Theme)</div>
+            <div style="margin-top:30px; text-align: center; color: var(--muted); font-size: 12px;">เต็ม 10 ให้ 7 เจ็ดว่าดัดจัดว่าเด็ด มั้วะ</div>
         </footer>
     </div>
 
@@ -1083,3 +1083,4 @@
     </script>
 </body>
 </html>
+
